--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -1,6 +1,8 @@
 pipeline {
     agent any
-
+    tools {
+        maven '3.9.5'
+    }
     environment {
         MAVEN_HOME = tool 'Maven-3.9.5'
         JAVA_HOME = tool 'Java'
@@ -29,7 +31,7 @@ pipeline {
             steps {
                 // Build the project, run tests, and analyze with SonarQube
                 dir('JtProject')
-                sh "${MAVEN_HOME}/bin/mvn clean test install sonar:sonar jacoco:report"
+                sh 'mvn clean test install sonar:sonar jacoco:report'
             }
         }
         stage('Deploy to Tomcat') {
