Edit maven version v5

--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
                 // Build the project, run tests, and analyze with SonarQube
                 dir('JtProject')
                 {
-                sh 'mvn clean test install sonar:sonar jacoco:report'
+                bat 'mvn clean test install sonar:sonar jacoco:report'
                 }
            }
         }
