--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     tools {
         maven '3.9.5'
+        jdk 'Java17'
     }
     triggers {
         pollSCM('0 */2 9-17 * 1-5') // Poll SCM every 2 hours at working days between 9-00 and 17-00
