--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -36,6 +36,25 @@ pipeline {
     }
 
     post {
+        success {
+                    // Record JaCoCo coverage report
+                    jacoco(execPattern: '**/target/jacoco.exec')
+
+                    // Publish HTML reports
+                    dir('JtProject'){
+                    publishHTML([
+                        allowMissing: false,
+                        alwaysLinkToLastBuild: false,
+                        keepAll: true,
+                        reportDir: 'JtProject/target/site/jacoco',
+                        reportFiles: 'index.html',
+                        reportName: 'JaCoCo Code Coverage'
+                    ])
+                    }
+                    // Actions to perform if the pipeline is successful
+                    echo 'Build and analysis successful!'
+                }
+
         failure {
             // Actions to perform if the pipeline fails
             echo 'Build or analysis failed!'
