--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -33,6 +33,13 @@ pipeline {
                 }
            }
         }
+        stage ('Deploy') {
+              steps {
+                script {
+                  deploy adapters: [tomcat9(credentialsId: 'deployer', path: '', url: 'http://localhost:8282')], onFailure: false, war: '**/*.war'
+                }
+              }
+        }
     }
 
     post {
