--- a/JtProject/Jenkinsfile
+++ b/JtProject/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
         stage ('Deploy') {
               steps {
                 script {
-                  deploy adapters: [tomcat9(credentialsId: 'deployer', path: '', url: 'http://localhost:8282')], onFailure: false, war: '**/*.war'
+                  deploy adapters: [tomcat9(credentialsId: '5e64a869-9263-4427-b84d-906d8e921560', path: '', url: 'http://localhost:8282')], onFailure: false, war: '**/*.war'
                 }
               }
         }
